# origins-forge

./: README.md  install.sh
docs/: index.html
origins-cli/: main.py  pyproject.toml  setup.py
origins-cli/origins_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
origins-documentation/: index.html
