[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build-meta"

[project]
name = "origins-forge"
version = "0.2.4"
description = "Origins Intelligent Dev Tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]",
    "rich",
    "google-genai",
    "questionary",
    "PyGithub",
    "openai",
    "requests"
]

[project.scripts]
origins = "main:app"
